# vendor_qcom

./: Android.mk  README.md
data/: Makefile.am  configure.ac  data.pc.in
data/ATFWD-daemon/: Android.mk  atfwd_daemon.c
data/bridgemgr/: Android.mk
data/commandSvc/: Android.mk
data/configdb/inc/: configdb.h
data/configdb/src/: Android.mk  Makefile.am  configdb.c  configdb_util.c  configdb_util.h  configdb_xml.c
data/ds_fmc_app/inc/: ds_fmc_app.h
data/ds_fmc_app/src/: Android.mk  ds_fmc_app.c  ds_fmc_app_call_mgr.c  ds_fmc_app_call_mgr.h  ds_fmc_app_data_ext_if.c  ds_fmc_app_data_ext_if.h  ds_fmc_app_data_if.h  ds_fmc_app_data_mdm_if.c  ds_fmc_app_data_mdm_if.h  ds_fmc_app_exec.c  ds_fmc_app_exec.h  ds_fmc_app_gen_sm.sh  ds_fmc_app_main.c  ds_fmc_app_main.h  ds_fmc_app_qmi.c  ds_fmc_app_qmi.h  ds_fmc_app_sm.c  ds_fmc_app_sm.h  ds_fmc_app_sm.stm  ds_fmc_app_sm_ext.h  ds_fmc_app_sm_int.c  ds_fmc_app_sm_int.h  ds_fmc_app_tunnel_mgr.c  ds_fmc_app_tunnel_mgr.h  ds_fmc_app_util.c  ds_fmc_app_util.h
data/ds_fmc_app/test/: Android.mk  dfa_test_1.c  dfa_test_2.c  dfa_test_3.c  dfa_test_4.c  dfa_test_5.c  dfa_test_6.c
data/ds_netutils/dsdnsutil/: Android.mk  dsdnsutil.c  dsdnsutil.h
data/ds_netutils/inc/: qc_getaddrinfo.h
data/ds_netutils/src/: Android.mk  qc_getaddrinfo.c  qc_strlcpy.c  res_config.h
data/dsi_netctrl/inc/: dsi_netctrl.h  dsi_netctrl_qos.h
data/dsi_netctrl/src/: Android.mk  Makefile  Makefile.am  dsi_netctrl.c  dsi_netctrl_cb_thrd.c  dsi_netctrl_embms.c  dsi_netctrl_init.c  dsi_netctrl_mni.c  dsi_netctrl_mni.h  dsi_netctrl_mni_cb.c  dsi_netctrl_mni_cb.h  dsi_netctrl_multimodem.c  dsi_netctrl_netmgr.c  dsi_netctrl_platform.c  dsi_netctrl_platform.h  dsi_netctrl_qos.c  dsi_netctrl_stubs.c  dsi_netctrli.c  dsi_netctrli.h
data/dss/inc/: ds_fd_pass.h  ds_linux.h  dsc_dcm.h  dsc_dcm_api.h  dsci.h  dserrno.h  dss_netpolicy.h  dssocket.h  dssocket_common.h  dssocket_defs_linux.h
data/dss/src/: Android.mk  ds_fd_pass.c  ds_socket.c  dsc.c  dsc_call.c  dsc_call.h  dsc_cmd.c  dsc_cmd.h  dsc_dcm.c  dsc_dcmi.h  dsc_kif.c  dsc_kif.h  dsc_main.c  dsc_main.h  dsc_qmi_nasi.h  dsc_qmi_wds.c  dsc_qmi_wds.h  dsc_test.c  dsc_test.h  dsc_util.c  dsc_util.h  dss.mk  qcomdsc-kif.sh  qcomdsc.sh  udhcpc.sh
data/dss_new/inc/: complotask.h  comptask.h  dcc_task.h  device_management_service_v01.h  dhcp6_client.h  dhcp_client.h  dhcp_client_common.h  dhcp_server_defs.h  dhcp_server_mgr.h  ds_auth.h  ds_flow_control.h  ds_mux_ext.h  ds_profile.h  ds_profile_3gpp.h  ds_profile_3gpp2.h  ds_qmimsglib_task.h  ds_sig_svc.h  ds_sig_task.h  dsatapi.h  dsbcdb_task.h  dsbcmcs_defs.h  dserrno.h  dsgcsd_task.h  dsmip.h  dsrlp.h  dss_iface_ioctl.h  dss_netpolicy.h  dss_ping.h  dssdns.h  dssinternal.h  dssocket.h  dssocket_defs.h  dstask.h  dsucsd.h  dsucsdappif.h  dsucsdappif_apis.h  dsumtspdpreg.h  dswcsddltask.h  dswcsdultask.h  ps.h  (+61 more)
data/dss_new/src/: Android.min  Android.mk  Makefile.am
data/dsutils/: configure.ac
data/dsutils/inc/: comdef.h  ds_list.h  ds_util.h
data/dsutils/src/: Android.mk  Makefile  Makefile.am  ds_cmdq.c  ds_list.c  ds_sl_list.c  ds_util.c  queue.c  stm2.c
data/mobileap/inc/: qcmap_cm_api.h
data/mobileap/src/: Makefile.am  QCMAP_ConnectionManager.cpp  QCMAP_ConnectionManager.h  mobileap_cfg.xml  mobileap_cfg.xsd  qcmap_cm.c  qcmap_cm_main.cpp  qcmap_cm_xml.c  qcmap_cmdq.c  qcmap_cmdq.h
data/netmgr/inc/: netmgr.h
data/netmgr/src/: Android.min  Android.mk  Makefile  Makefile.am  netmgr_client.c  netmgr_defs.h  netmgr_exec.c  netmgr_exec.h  netmgr_kif.c  (+21 more)
data/port-bridge/: Android.mk  dun_kevents.c  dun_service.c  port_bridge.c  port_bridge.h
data/radish/: Android.mk  Makefile.am  config.c  config.h  icmpv6.c  icmpv6.h  list.h  r_ipv6.h  radish.c  radish.h
kernel-tests/kgsl/: Android.mk  Makefile.am  README  kgsl_helper.c  kgsl_helper.h  kgsl_test.c  kgsl_test.sh  kgsl_test_adv.c  kgsl_test_nominal.c  kgsl_test_repeat.c  kgsl_test_small.c  kgsl_test_stress.c  run.sh
mm-audio/audio-ctrl/: Android.mk  AudioFilter.csv  Makefile.am  configure.ac
qmi/: configure.ac  qmi.mk
qmi/inc/: qmi.h  qmi_eap_srvc.h  qmi_port_defs.h  qmi_qos_srvc.h  qmi_wds_srvc.h
qmi/platform/: linux_qmi_qmux_if_client.c  linux_qmi_qmux_if_server.c  qmi_platform.c  qmi_platform.h  qmi_platform_config.h  qmi_platform_qmux_if.h  qmi_platform_qmux_io.c  qmi_platform_qmux_io.h
qmi/proxy/: Android.mk  qmi_proxy.c  qmi_proxy_sglte_sm.c
qmi/qcci_legacy/: Android.mk
qmi/qmi_client_qmux/: Android.mk  Makefile  Makefile.am
qmi/qmuxd/: Android.mk  Makefile  Makefile.am
qmi/services/: Android.mk  Makefile  Makefile.am  control_service_v01.c  control_service_v01.h  data_system_determination_v01.c  data_system_determination_v01.h  device_management_service_v01.c  device_management_service_v01.h  ip_multimedia_subsystem_application_v01.c  ip_multimedia_subsystem_application_v01.h  ip_multimedia_subsystem_settings_v01.c  ip_multimedia_subsystem_settings_v01.h  network_access_service_common_v01.c  network_access_service_common_v01.h  network_access_service_v01.c  network_access_service_v01.h  qmiserviceslib.mak  qualcomm_mobile_access_point_msgr_v01.c  qualcomm_mobile_access_point_msgr_v01.h  user_identity_module_remote_v01.c  user_identity_module_remote_v01.h  voice_service_common_v02.c  voice_service_common_v02.h  voice_service_v02.c  voice_service_v02.h  wireless_data_administrative_service_v01.c  wireless_data_administrative_service_v01.h  wireless_messaging_service_v01.c  wireless_messaging_service_v01.h
qmi/services_ext/: user_identity_module_v01.c  user_identity_module_v01.h
qmi/src/: Android.mk  Makefile  qmi.c  qmi_atcop_srvc.c  qmi_cat_srvc.c  qmi_client.c  qmi_eap_srvc.c  qmi_i.h  qmi_nas_srvc.c  qmi_qmux.c  qmi_qmux.h  qmi_qmux_if.c  qmi_qmux_if.h  qmi_qos_srvc.c  qmi_service.c  qmi_service.h  qmi_uim_srvc.c  qmi_util.c  qmi_wds_srvc.c  qmi_wds_srvc_i.h  qmi_wds_utils.c
qmi/tests/: Android.mk  fota_cdma.c  qmi_client_utils.c  qmi_simple_ril_core.c  qmi_simple_ril_misc.c  qmi_simple_ril_nas.c  qmi_simple_ril_suite.c  qmi_simple_ril_voice.c  qmi_test_console.c
(+4393 files in other folders)
